# pure-maps

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  AUTHORS.md  Build.md  CMakeLists.txt  CREDITS  INSTALL  MANIFEST  Makefile  Makefile.test  NEWS  NEWS.md  README  README.md  RELEASING  RELEASING.md  TODO  TODO.md  common.pri  config_template.py.in  fix-compilation-with-clickable.patch  pure-maps.pro  route.json
po/: CMakeLists.txt  README.md  be_BY.po  cs.po  de_DE.po  el.po  es.po  es_ES.po  et.po  fi.po  fr.po  fur.po  hu_HU.po  it.po  nb.po  nl.po  nl_BE.po  no.po  pl.po  poor-maps.pot  pt_BR.po  pure-maps.pot  ro.po  ru.po  sk_SK.po  sl_SI.po  sv.po  whogo-maps.pot  zh_CN.po
poor/: CMakeLists.txt  __init__.py  apikeys.py  application.py  astral  attrdict.py  cache.py  config.py  flexpolyline  geocoder.py  geomag  gpxpy  guide.py  history.py  http.py  i18n.py  icon.py  keystore.py  magfield.py  map.py  narrative.py  openlocationcode  paths.py  polysimp.py  router.py  server.py  storage.py  sun.py  tilecollection.py  tilesource.py  util.py  voice.py
poor/test/: __init__.py  delayed_test_config.py  test_attrdict.py  test_config.py  test_geocoder.py  test_guide.py  test_http.py  test_map.py  test_polysimp.py  test_router.py  test_tilesource.py  test_util.py  test_voice.py  unittest.py
qml/: AboutPage.qml  Attribution.qml  AttributionButton.qml  AttributionPage.qml  AttributionText.qml  BasemapButton.qml  BasemapPage.qml  Bubble.qml  BubbleButton.qml  BusyItem.qml  BusyModal.qml  CMakeLists.txt  CachePage.qml  CenterButton.qml  Commander.qml  Compass.qml  Config.qml  Cover.qml  CoverTile.qml  DummyPage.qml  GeocodeButton.qml  GeocodeItem.qml  GeocodePage.qml  GeocoderPage.qml  GeocodingResultsPage.qml  GuidePage.qml  IconListItem.qml  InfoPanel.qml  InitPage.qml  LanguageSelector.qml  LicensePage.qml  ListItemLabel.qml  ListItemLabelActive.qml  ListItemSwitch.qml  ListItemText.qml  ListTitleLabel.qml  Main.qml  Maneuver.qml  ManeuverMarker.qml  Map.qml  (+87 more)
qml/icons/: svg2png
qml/js/: simplify.js  util.js
qml/platform.generic/: ExpandingSectionGroupPL.qml  ExpandingSectionPL.qml  MenuDrawerItemPL.qml  MenuDrawerPL.qml  MenuDrawerSubmenuItemPL.qml  MenuDrawerSubmenuPL.qml  README.md
qml/platform.kirigami/: ApplicationWindowPL.qml  ButtonPL.qml  ColumnLayoutPL.qml  ComboBoxPL.qml  ContextMenuPL.qml  DatePickerDialogPL.qml  DialogAutoPL.qml  DialogListPL.qml  DialogPL.qml  ExpandingSectionGroupPL.qml  ExpandingSectionPL.qml  FilePickerPL.qml  FileSelectorPL.qml  FormLayoutPL.qml  IconButtonPL.qml  IconPL.qml  ListItemPL.qml  MenuDrawerPL.qml  PageEmptyPL.qml  PageListPL.qml  PageMenuItemPL.qml  PageMenuPL.qml  PagePL.qml  README.md  RemorsePopupPL.qml  ScreenSaver.qml  SearchFieldPL.qml  SectionHeaderPL.qml  SliderPL.qml  StackPL.qml  StylerPL.qml  TextFieldPL.qml  TextSwitchPL.qml  TimePickerDialogPL.qml  ToolItemPL.qml  ValueButtonPL.qml
qml/platform.kirigami24/: ApplicationWindowPL.qml  ComboBoxPL.qml  DatePickerDialogPL.qml  DialogListPL.qml  LabelPL.qml  PageMenuItemPL.qml  PagePL.qml  README.md  SearchFieldPL.qml  SectionHeaderPL.qml  ValueButtonPL.qml
qml/platform.qt5/: AudioPL.qml  ShadowPL.qml
qml/platform.qt6/: AudioPL.qml  ShadowPL.qml
qml/platform.qtcontrols/: ApplicationWindowPL.qml  BusyIndicatorPL.qml  BusyIndicatorSmallPL.qml  ButtonPL.qml  ClipboardPL.qml  ColumnLayoutPL.qml  ComboBoxPL.qml  ContextMenuItemPL.qml  ContextMenuPL.qml  Cover.qml  DatePickerDialogPL.qml  DialogAutoPL.qml  DialogListPL.qml  DialogPL.qml  ExpandingSectionPL.qml  FilePickerPL.qml  FileSelectorPL.qml  HeaderBarImpl.qml  IconButtonPL.qml  IconPL.qml  LabelPL.qml  ListItemPL.qml  PageEmptyPL.qml  PageListPL.qml  PageMenuItemPL.qml  PageMenuPL.qml  PagePL.qml  README.md  ScreenSaver.qml  SearchFieldPL.qml  SectionHeaderPL.qml  SliderPL.qml  StackImplementationPL.qml  StackPL.qml  StylerPL.qml  TextAreaPL.qml  TextFieldPL.qml  TextSwitchPL.qml  TimePickerDialogPL.qml  ToolItemPL.qml  (+1 more)
qml/platform.qtcontrols6/: ApplicationWindowPL.qml  AudioPL.qml  BusyIndicatorPL.qml  BusyIndicatorSmallPL.qml  ButtonPL.qml  ClipboardPL.qml  ComboBoxPL.qml  ContextMenuItemPL.qml  ContextMenuPL.qml  DatePickerDialogPL.qml  DialogAutoPL.qml  DialogListPL.qml  DialogPL.qml  ExpandingSectionGroupPL.qml  ExpandingSectionPL.qml  FileSelectorPL.qml  FormLayoutPL.qml  HeaderBarImpl.qml  IconButtonPL.qml  IconPL.qml  LabelPL.qml  ListItemPL.qml  MenuDrawerPL.qml  MenuDrawerSubmenuPL.qml  PageEmptyPL.qml  PageListPL.qml  PageMenuItemPL.qml  PageMenuPL.qml  PagePL.qml  README.md  RemorsePopupPL.qml  SearchFieldPL.qml  SectionHeaderPL.qml  ShadowPL.qml  SliderPL.qml  StackPL.qml  StylerPL.qml  TextAreaPL.qml  TextFieldPL.qml  TextSwitchPL.qml  (+3 more)
qml/platform.silica/: ApplicationWindowPL.qml  BusyIndicatorPL.qml  ButtonPL.qml  ComboBoxPL.qml  ContextMenuPL.qml  Cover.qml  DatePickerDialogPL.qml  DialogAutoPL.qml  DialogListPL.qml  DialogPL.qml  FileSelectorPL.qml  IconButtonPL.qml  IconPL.qml  ListItemPL.qml  MenuDrawerItemPL.qml  MenuDrawerSubmenuItemPL.qml  PageEmptyPL.qml  PageListPL.qml  PageMenuItemPL.qml  PageMenuPL.qml  PagePL.qml  SearchFieldPL.qml  SectionHeaderPL.qml  SliderPL.qml  StackImplementationPL.qml  StackPL.qml  StylerPL.qml  TextAreaPL.qml  TextFieldPL.qml  TextSwitchPL.qml  TimePickerDialogPL.qml  ToolItemPL.qml  ValueButtonPL.qml
qml/platform.ubports/: ApplicationWindowPL.qml  BusyIndicatorPL.qml  BusyIndicatorSmallPL.qml  ButtonPL.qml  ClipboardPL.qml  (+38 more)
src/: CMakeLists.txt  clipboard.cpp  clipboard.h  cmdlineparser.cpp  cmdlineparser.h  commander.cpp  commander.h  config.cpp  config.h  dbusroot.cpp  dbusroot.h  dbusservice.cpp  dbusservice.h  dbustracker.cpp  dbustracker.h  location.cpp  location.h  locationmodel.cpp  locationmodel.h  main.cpp  maneuver.cpp  maneuver.h  maneuvermodel.cpp  maneuvermodel.h  navigator.cpp  navigator.h  navigatordbusadapter.cpp  navigatordbusadapter.h  osmscout_mapmatching.cpp  osmscout_mapmatching.h  osmscout_mapmatching.xml  positionsource.cpp  positionsource.h  prompt.cpp  prompt.h  screensaverinhibitor.cpp  screensaverinhibitor.h  util.cpp  util.h
(+464 files in other folders)
